fix vertical alignment of map button

--- a/assets/style/map.scss
+++ b/assets/style/map.scss
@@ -9,6 +9,7 @@
         left: 50%;
         max-width: 60%;
         transform: translate(-50%, -50%);
+        margin: 0;
     }
 }
 
